--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,10 @@ ul {
 
 .about-contant p {
 	color: #fff;
+	font-size: 24px;
+	margin-bottom: 0;
+	font-weight: 300;
+	text-align: justify;
 }
 
 .intro-video {
