--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@
 html,
 body {
 	height: 100%;
+	max-width: 100%;
 	font-family: "Roboto", sans-serif;
+	overflow-x: hidden;
 }
 
 img {
@@ -114,7 +116,7 @@ ul {
 
 .spad {
 	padding-top: 95px;
-	/* padding-bottom: 95px; */
+ padding-bottom: 95px; 
 }
 
 .section-title {
@@ -163,6 +165,7 @@ ul {
 	color: #0b1033;
 	 padding-top: 300px;
 }
+
 
 /*------------------------
 	Common elements
